--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,10 @@
     <li><a href="" [routerLink]="['/admin/blast']">Admin --> Blast</a></li>
   </ul>
 </nav>
+
+<button mat-raised-button>
+  OK<mat-icon>done</mat-icon>
+</button>
+
 <router-outlet></router-outlet>
 
